--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                 </div>
                 
                 <div class="nav_btns">
+                    <!-- Theme change button -->
+                    <i class="uil uil-moon change-theme" id="theme-button"></i>
+
+                     
                     <div class="nav_toggle" id="nav-toggle">
                         <i class="uil uil-apps"></i>
                     </div>
@@ -592,32 +596,34 @@
                 <span class="section_subtitle">Get in touch</span>
 
                 <div class="contact__container container grid">
-                    <div class="contact__information">
-                        <i class="uil uil-phone contact__icon"></i>
+                    <div>
+                        <div class="contact__information">
+                            <i class="uil uil-phone contact__icon"></i>
 
-                        <div>
-                            <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">7224144800</span>
+                            <div>
+                                <h3 class="contact__title">Call Me</h3>
+                                <span class="contact__subtitle">7224144800</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="contact__information">
-                        <i class="uil uil-envelope contact__icon"></i>
+                        <div class="contact__information">
+                            <i class="uil uil-envelope contact__icon"></i>
 
-                        <div>
-                            <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">rogelio_perez_98@hotmail.com</span>
+                            <div>
+                                <h3 class="contact__title">Email</h3>
+                                <span class="contact__subtitle">rogelio_perez_98@hotmail.com</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="contact__information">
-                        <i class="uil uil-map-marker contact__icon"></i>
+                        <div class="contact__information">
+                            <i class="uil uil-map-marker contact__icon"></i>
 
-                        <div>
-                            <h3 class="contact__title">Location</h3>
-                            <span class="contact__subtitle">Mexico - Toluca</span>
+                            <div>
+                                <h3 class="contact__title">Location</h3>
+                                <span class="contact__subtitle">Mexico - Toluca</span>
+                            </div>
                         </div>
-                    </div>
+                </div>
 
                     <form action="" class="contact__form grid">
                         <div class="contact__inputs grid">
