--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <span class="section_subtitle">My introduction</span>
         
                 <div class="about__container container grid">
-                    <img src="assets/img/perfil.png" alt="rogelio profile photo" class="about__img"> 
+                    <img src="assets/img/about-me.png" alt="rogelio profile photo" class="about__img"> 
 
                     <div class="about__data">
                         <p class="about__description">
@@ -514,52 +514,91 @@
 
                 <div class="portfalio__container container swiper">
                     <div class="swiper-wrapper">
-                        <!--==================== PORTFOLIO 1 ====================-->
+                        <!--==================== BANDGRAM ====================-->
                         <div class="portfalio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="portfalio 1" class="portfalio__img">
+                            <img src="assets/img/bandgram.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Bandgram</h3>
                                 <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portfalio__button">
+                                <a href="https://bandgram-8srlt.ondigitalocean.app/" target="_blank" class="button button--flex button--small portfalio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
                         </div>
 
-                        <!--==================== PORTFOLIO 2 ====================-->
+                        <!--==================== ECOTEC ====================-->
                         <div class="portfalio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="portfalio 1" class="portfalio__img">
+                            <img src="assets/img/index-ecotec.JPG" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Ecotec</h3>
                                 <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portfalio__button">
+                                <a href="https://ecotec-upd4g.ondigitalocean.app/login" target="_blank" class="button button--flex button--small portfalio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
                         </div>
 
-                        <!--==================== PORTFOLIO 3 ====================-->
+                        <!--==================== COMPRATECH ====================-->
                         <div class="portfalio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="portfalio 1" class="portfalio__img">
+                            <img src="assets/img/compratech.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Compratech</h3>
                                 <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portfalio__button">
+                                <a href="https://cryptic-lake-73220.herokuapp.com/" target="_blank" class="button button--flex button--small portfalio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
                             </div>
                         </div>
 
-                        <!--==================== PORTFOLIO 4 ====================-->
+                        <!--==================== GARANTEMEX ====================-->
                         <div class="portfalio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="portfalio 1" class="portfalio__img">
+                            <img src="assets/img/index-garantemex.JPG" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
-                                <h3 class="portfalio__title">Garantamex</h3>
+                                <h3 class="portfalio__title">Garantemex</h3>
                                 <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portfalio__button">
+                                <a href="https://github.com/RogerCHDK/ApiGarantamex" target="_blank" class="button button--flex button--small portfalio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== D-MAP ====================-->
+                        <div class="portfalio__content grid swiper-slide">
+                            <img src="assets/img/dmap.png" alt="portfalio 1" class="portfalio__img">
+                            <div class="portfalio__data">
+                                <h3 class="portfalio__title">D-MAP</h3>
+                                <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="https://dmap.com.mx/" target="_blank" class="button button--flex button--small portfalio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== RAMMART ====================-->
+                        <div class="portfalio__content grid swiper-slide">
+                            <img src="assets/img/rammart.png" alt="portfalio 1" class="portfalio__img">
+                            <div class="portfalio__data">
+                                <h3 class="portfalio__title">Rammart Express</h3>
+                                <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="https://rammartexpress.com/" target="_blank" class="button button--flex button--small portfalio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!--==================== PORTAFOLIO V1 ====================-->
+                        <div class="portfalio__content grid swiper-slide">
+                            <img src="assets/img/portfaliov1.png" alt="portfalio 1" class="portfalio__img">
+                            <div class="portfalio__data">
+                                <h3 class="portfalio__title">Personal Portfolio</h3>
+                                <p class="portfalio_description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="https://rogerchdk.github.io/roger-perez/" target="_blank" class="button button--flex button--small portfalio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -637,7 +676,7 @@
                             </div>
                         </div>
                         <div class="contact__content">
-                            <label for="" class="contact__label">Project</label>
+                            <label for="" class="contact__label">Company</label>
                             <input type="text" class="contact__input">
                         </div>
                         <div class="contact__content">
