Descripcion sobre mi actualizada

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav_logo"> Rogelio Perez</a>
+                <a href="#" class="nav_logo">Rogelio Perez</a>
 
                 <div class="nav_menu" id="nav-menu">
                     <ul class="nav_list grid">
@@ -111,8 +111,9 @@
                             <h1 class="home_title">
                                 Hi, I am Rogelio Perez
                             </h1>
-                            <h3 class="home__subtitle">Web Developer</h3>
-                            <p class="home__description">High level experience in web design and development knowledge, producing quality work.</p>
+                            <h3 class="home__subtitle">Computer Systems Engineer</h3>
+                            <p class="home__description">I like to solve problems through technology, from 
+                                planning the structure of each project, to the transition to a production environment.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -139,21 +140,27 @@
 
                     <div class="about__data">
                         <p class="about__description">
-                            Web developer, with extensive knowledge and years of experience, working in web technologies and Ui / Ux design, delivering quality work.
+                            I have knowledge in software development, my main focus has been server-side programming using languages like Java, Javascript and Php.
+                        </p>
+                        <p class="about__description">
+                            I have worked with frameworks such as Laravel, Node and PrimeFaces to speed up software development times.
+                        </p>
+                        <p class="about__description">
+                            I have also participated in the design and management of databases using mainly MySql.
                         </p>
                         <div class="about__info">
                             <div>
-                                <span class="about__info-title">08+</span>
+                                <span class="about__info-title">02+</span>
                                 <span class="about__info-name">Years <br> experience</span>
                             </div>
 
                             <div>
-                                <span class="about__info-title">08+</span>
-                                <span class="about__info-name">Completed <br> project</span>
+                                <span class="about__info-title">07+</span>
+                                <span class="about__info-name">Completed <br> projects</span>
                             </div>
 
                             <div>
-                                <span class="about__info-title">08+</span>
+                                <span class="about__info-title">02+</span>
                                 <span class="about__info-name">Companies <br> worked</span>
                             </div>
                         </div>
