Seccion qualification update

--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Computer Engineer</h3>
-                                    <span class="qualification__subtitle">Instituto Tecnologico de Toluca</span>
+                                    <h3 class="qualification__title">Computer Systems Engineer</h3>
+                                    <span class="qualification__subtitle">Instituto Tecnológico de Toluca</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2016 - 2021
@@ -447,12 +447,12 @@
                             </div>
 
                             <!--==================== QUALIFICATION 2 ====================-->
-                            <div class="qualification__data">
+                            <!-- <div class="qualification__data">
                                 <div></div>
 
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <!-- <span class="qualification__line"></span> -->
+                                    <span class="qualification__line"></span>
                                 </div>
                                 
                                 <div>
@@ -463,7 +463,7 @@
                                         2013 - 2016
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                            <!--==================== QUALIFICATION CONTENT 2====================-->
@@ -496,7 +496,7 @@
                                 
                                 <div>
                                     <h3 class="qualification__title">Web Developer</h3>
-                                    <span class="qualification__subtitle">Intituto Tecnologico de Toluca</span>
+                                    <span class="qualification__subtitle">Instituto Tecnológico de Toluca</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         January 2020 – August 2020
