--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                             <img src="assets/img/bandgram.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Bandgram</h3>
-                                <p class="portfalio_description">
+                                <p class="portfalio__description">
                                     Project to publicize and help improve the economy of independent artists, through a web application, in which bands can upload information about their concerts, discography, videos.
                                 </p>
                                 <a href="https://bandgram-8srlt.ondigitalocean.app/" target="_blank" class="button button--flex button--small portfalio__button">
@@ -541,7 +541,7 @@
                             <img src="assets/img/index-ecotec.JPG" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Ecotec</h3>
-                                <p class="portfalio_description">
+                                <p class="portfalio__description">
                                     Promote the culture of caring for the environment, through a web application that serves as an information medium for all those who are interested in the subject.
                                 </p>
                                 <a href="https://ecotec-upd4g.ondigitalocean.app/login" target="_blank" class="button button--flex button--small portfalio__button">
@@ -556,7 +556,7 @@
                             <img src="assets/img/compratech.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Compratech</h3>
-                                <p class="portfalio_description">
+                                <p class="portfalio__description">
                                     E-Commerce where you can buy different computer components so that you can build yours in a personalized way.
                                 </p>
                                 <a href="https://cryptic-lake-73220.herokuapp.com/" target="_blank" class="button button--flex button--small portfalio__button">
@@ -571,7 +571,7 @@
                             <img src="assets/img/index-garantemex.JPG" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Garantemex</h3>
-                                <p class="portfalio_description">
+                                <p class="portfalio__description">
                                     Web application to generate and manage in a virtual way the guarantees of the users, to facilitate the delivery and validation of the guarantees, providing the commercial store with an administration on them.
                                 </p>
                                 <a href="https://github.com/RogerCHDK/ApiGarantamex" target="_blank" class="button button--flex button--small portfalio__button">
@@ -586,7 +586,7 @@
                             <img src="assets/img/dmap.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">D-MAP</h3>
-                                <p class="portfalio_description">
+                                <p class="portfalio__description">
                                     Progressive web application to systematize the property acquisition process carried out by mortgage companies and they have better information management.
                                 </p>
                                 <a href="https://dmap.com.mx/" target="_blank" class="button button--flex button--small portfalio__button">
@@ -601,7 +601,7 @@
                             <img src="assets/img/rammart.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Rammart Express</h3>
-                                <p class="portfalio_description">
+                                <p class="portfalio__description">
                                     Web platform of a Mexican company dedicated to the delivery, collection and distribution of courier and parcel around the entire State of Mexico.
                                 </p>
                                 <a href="https://rammartexpress.com/" target="_blank" class="button button--flex button--small portfalio__button">
@@ -616,7 +616,7 @@
                             <img src="assets/img/portfaliov1.png" alt="portfalio 1" class="portfalio__img">
                             <div class="portfalio__data">
                                 <h3 class="portfalio__title">Personal Portfolio</h3>
-                                <p class="portfalio_description">My first personal website to show my completed projects.</p>
+                                <p class="portfalio__description">My first personal website to show my completed projects.</p>
                                 <a href="https://rogerchdk.github.io/roger-perez/" target="_blank" class="button button--flex button--small portfalio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
