--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a href="assets/pdf/Resume_Rogelio_Perez.pdf" download="" class="button button--flex">
+                            <a href="assets/pdf/CV- Rogelio Perez.pdf" download="" class="button button--flex">
                                Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
